--- a/springboot-01-ratelimiter/pom.xml
+++ b/springboot-01-ratelimiter/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-ratelimiter</artifactId>
+    <artifactId>springboot-01-ratelimiter</artifactId>
 
     <name>springboot-ratelimiter</name>
 
@@ -20,6 +20,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <artifactId>base-common</artifactId>
+            <groupId>com.huabin</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
     </dependencies>
 
