--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,20 @@
         <module>springboot-kafka</module>
         <module>springboot-mybatis</module>
         <module>base-mybatis-generator</module>
+        <module>spring-transactional</module>
+        <module>springboot-mybatis-plus</module>
+        <module>springboot-learning</module>
     </modules>
     <name>springboot</name>
 
     <properties>
         <spring.boot.version>2.2.5.RELEASE</spring.boot.version>
         <spring.cloud.version>Hoxton.SR3</spring.cloud.version>
+        <mybatis-spring-boot-starter.version>2.1.2</mybatis-spring-boot-starter.version>
+        <mybatis-plus.version>3.4.2</mybatis-plus.version>
         <base.common>1.0-SNAPSHOT</base.common>
+        <spring-cloud-starter-netflix-hystrix>2.2.5.RELEASE</spring-cloud-starter-netflix-hystrix>
+        <spring-jcl>5.3.8</spring-jcl>
     </properties>
 
     <dependencyManagement>
@@ -67,8 +74,25 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.mybatis.spring.boot</groupId>-->
+<!--            <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--            <version>${mybatis-spring-boot-starter.version}</version>-->
+<!--        </dependency>-->
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>${mybatis-plus.version}</version>
         </dependency>
 
         <dependency>
@@ -98,6 +122,18 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.vintage</groupId>
+                    <artifactId>junit-vintage-engine</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
 
