--- a/springboot-mybatis-plus/pom.xml
+++ b/springboot-mybatis-plus/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.31</version>
         </dependency>
+        <dependency>
+            <groupId>com.huabin</groupId>
+            <artifactId>base-common</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
