--- a/springboot-sharding-jdbc/pom.xml
+++ b/springboot-sharding-jdbc/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>base-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <dependencies>
-
-    </dependencies>
+    <artifactId>springboot-sharding-jdbc</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
