--- a/springboot-excel/pom.xml
+++ b/springboot-excel/pom.xml
@@ -29,8 +29,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
-            <artifactId>poi-ooxml-schemas</artifactId>
-            <version>4.1.2</version>
+            <artifactId>ooxml-schemas</artifactId>
+            <version>1.4</version>
         </dependency>
 
     </dependencies>
