--- a/spring-maven/pom.xml
+++ b/spring-maven/pom.xml
@@ -22,10 +22,50 @@
             <artifactId>base-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- MyBatis Spring Boot Starter -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.1.2</version>
+            <exclusions>
+                <!-- 排除旧版本的 SnakeYAML (1.25) -->
+                <exclusion>
+                    <groupId>org.yaml</groupId>
+                    <artifactId>snakeyaml</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <!-- 显式引入安全版本的 SnakeYAML (2.0)，修复 CVE 漏洞 -->
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
         <plugins>
+            <!-- Maven Compiler Plugin：修复 maven-shared-utils 漏洞 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+                <dependencies>
+                    <!-- 升级 maven-shared-utils 到安全版本 3.4.1，修复 CVE 漏洞 -->
+                    <dependency>
+                        <groupId>org.apache.maven.shared</groupId>
+                        <artifactId>maven-shared-utils</artifactId>
+                        <version>3.4.2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
 <!--            将项目打包成可执行的 Spring Boot JAR（包含嵌入式 Tomcat 和所有依赖）。-->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
